feat: create and update Subscription
