# src/main/java/app/hackoholics/api/endpoint/controller/SubscriptionController.java
@@ -1,0 +1,26 @@
+package app.hackoholics.api.endpoint.controller;
+
+import app.hackoholics.api.endpoint.mapper.SubscriptionMapper;
+import app.hackoholics.api.endpoint.rest.model.Subscription;
+import app.hackoholics.api.service.SubscriptionService;
+import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@AllArgsConstructor
+@Slf4j
+public class SubscriptionController {
+  private final SubscriptionService service;
+  private final SubscriptionMapper subscriptionMapper;
+
+  @PutMapping("/users/{uId}/subscribes")
+  public Subscription crupdateSubscription(
+      @PathVariable("uId") String uId, @RequestBody Subscription subscription) {
+    return subscriptionMapper.toRest(
+        service.crupdateSubscription(subscriptionMapper.toDomain(subscription)));
+  }
+}
