# src/main/java/app/hackoholics/api/repository/SubscriptionRepository.java
@@ -1,0 +1,6 @@
+package app.hackoholics.api.repository;
+
+import app.hackoholics.api.model.Subscription;
+import org.springframework.data.jpa.repository.JpaRepository;
+
+public interface SubscriptionRepository extends JpaRepository<Subscription, String> {}
